--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Temperatura Actual"
+                        android:textAlignment="center"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -95,7 +96,7 @@
                     <TextView
                         android:id="@+id/tv_temperature"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_marginTop="8dp"
                         android:text="0°C"
                         android:textColor="#FFFFFF"
@@ -120,7 +121,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Humedad Actual"
+                        android:text="Humedad           Actual"
+                        android:textAlignment="center"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -128,7 +130,7 @@
                     <TextView
                         android:id="@+id/tv_humedad"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_marginTop="8dp"
                         android:text="0%"
                         android:textColor="#FFFFFF"
